# quick-cryptor

./: README  configure  configure.ac
src/: Makefile.am  Makefile.in  fileman.c  fileman.h  main.c  quickman.c  quickman.h
